--- a/src/Frontend.form
+++ b/src/Frontend.form
@@ -220,7 +220,7 @@
               <background color="-16777216"/>
               <font name="Arial" size="20"/>
               <foreground color="-1"/>
-              <text value="Label"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="f4747" class="javax.swing.JButton" binding="button2" default-binding="true">
@@ -228,7 +228,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="Convert Currency"/>
             </properties>
           </component>
           <vspacer id="bd9ec">
@@ -252,11 +252,11 @@
         <children>
           <component id="47382" class="javax.swing.JLabel" binding="Time">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground color="-1"/>
-              <text value="Label"/>
+              <text value="Time"/>
             </properties>
           </component>
           <component id="b0ffc" class="javax.swing.JLabel" binding="DigitalClock">
@@ -265,7 +265,7 @@
             </constraints>
             <properties>
               <foreground color="-1"/>
-              <text value="Label"/>
+              <text value=""/>
             </properties>
           </component>
           <vspacer id="63038">
@@ -289,11 +289,11 @@
         <children>
           <component id="a3980" class="javax.swing.JLabel" binding="Time1">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground color="-1"/>
-              <text value="Label"/>
+              <text value="Time"/>
             </properties>
           </component>
           <vspacer id="db4a4">
@@ -307,7 +307,7 @@
             </constraints>
             <properties>
               <foreground color="-1"/>
-              <text value="Label"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -330,7 +330,7 @@
             </constraints>
             <properties>
               <foreground color="-1"/>
-              <text value="Label"/>
+              <text value=""/>
             </properties>
           </component>
           <vspacer id="15c22">
@@ -345,7 +345,7 @@
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Select Countries"/>
         </properties>
       </component>
     </children>
